Finished ScheduleService
