# src/main/java/ru/numbdev/mycalendar/model/dto/ScheduleDaysDTO.java
@@ -3,7 +3,9 @@ package ru.numbdev.mycalendar.model.dto;
 import java.time.LocalDate;
 import java.util.List;
 
+import ru.numbDev.openapi.model.ScheduleElement;
+
 public record ScheduleDaysDTO (
-   List<ScheduleUserDaysDTO> schedule,
+   List<ScheduleElement> schedule,
    List<LocalDate> ownerHoliday
 ) {}
